[package]
name = "daoo-voting"
version = "0.1.0"
authors = []
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.6.9"
byteorder = "1.3"
thiserror = "1.0.24"
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}


[lib]
crate-type = ["cdylib", "lib"]
